[package]
name = "bot_votes"
version = "0.1.0"
authors = ["sergentanguc"]
edition = "2018"

[dependencies]
reqwest = "0.9.10"
hyper = "0.12.24"
http = "0.1.16"
futures-timer = "0.1.1"
regex = "1.1.2"
chrono = "0.4.6"
rusoto_core = "0.37.0"
rusoto_dynamodb = "0.37.0"
log = "0.4.0"
env_logger = "0.6.1"
futures = "0.1.25"

[profile.dev]
codegen-units = 16
